--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-react-app" />
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Web site created using create-react-app" />
+  </head>
 
-<body>
-  <div id="root">
-    <!-- aca se monta la app de react -->
-  </div>
-  <script src="../src/index.js"></script>
-</body>
+  <body>
+    <div id="root"></div>
+    <script src="../src/index.js"></script>
+  </body>
 
-</html>
+  </html>
+
